Fixing regression bug 138663. Cached mail compose windows open up blank. r=harishd@netscape.com, sr=jband@netscape.com