layout/base/nsDocumentViewer.cpp
@@ -733,7 +733,9 @@ protected:
   // document management data
   //   these items are specific to markup documents (html and xml)
   //   may consider splitting these out into a subclass
-  PRBool   mAllowPlugins;
+  PRPackedBool mAllowPlugins;
+  PRPackedBool mIsSticky;
+
   /* character set member data */
   nsString mDefaultCharacterSet;
   nsString mHintCharset;
@@ -1115,11 +1117,10 @@ void DocumentViewerImpl::PrepareToStartLoad()
 }
 
 DocumentViewerImpl::DocumentViewerImpl(nsIPresContext* aPresContext)
-  : mPresContext(aPresContext)
+  : mPresContext(aPresContext), mAllowPlugins(PR_TRUE), mIsSticky(PR_FALSE)
 {
   NS_INIT_ISUPPORTS();
   mHintCharsetSource = kCharsetUninitialized;
-  mAllowPlugins      = PR_TRUE;
   PrepareToStartLoad();
 }
 
@@ -2079,6 +2080,14 @@ DocumentViewerImpl::Hide(void)
   if (mPreviousViewer) {
     mPreviousViewer->Destroy();
     mPreviousViewer = nsnull;
+  }
+
+  if (mIsSticky) {
+    // This window is sticky, that means that it might be shown again
+    // and we don't want the presshell n' all that to be thrown away
+    // just because the window is hidden.
+
+    return NS_OK;
   }
 
   if (mDeviceContext) {
@@ -4920,6 +4929,22 @@ DocumentViewerImpl::SetEnableRendering(PRBool aOn)
       mViewManager->DisableRefresh();
     }
   }
+  return NS_OK;
+}
+
+NS_IMETHODIMP
+DocumentViewerImpl::GetSticky(PRBool *aSticky)
+{
+  *aSticky = mIsSticky;
+
+  return NS_OK;
+}
+
+NS_IMETHODIMP
+DocumentViewerImpl::SetSticky(PRBool aSticky)
+{
+  mIsSticky = aSticky;
+
   return NS_OK;
 }
 
